# Kur0bot-Dashboard

./: README.md  db.py  main.py  pyproject.toml  start.sh
static/: styles.css
templates/: dashboard.html  forbidden.html  home.html
